Workspace02/CapSense_CSD_WithTuner01_Copy_01.cydsn/ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 02/14/2022 09:27:00 Project: CapSense_CSD_WithTuner01_Copy_01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\user\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "D:\Utilisateurs\user\Documents\PSoC Creator\Workspace02\CapSense_CSD_WithTuner01_Copy_01.cydsn\CapSense_CSD_WithTuner01_Copy_01.cyprj" -d CY8C5888LTI-LP097 -s "D:\Utilisateurs\user\Documents\PSoC Creator\Workspace02\CapSense_CSD_WithTuner01_Copy_01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Log: apr.M0058: The analog placement iterative improvement is 38% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 79% done. (App=cydsfit)
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/main.lst -g -ffunction-sections -O0 -ffat-lto-objects -c .\main.c -o .\ARM_GCC_493\Debug\main.o
.\main.c: In function 'main':
.\main.c:31:29: error: 'CapSense_1_PROXIMITYSENSOR0__PROX' undeclared (first use in this function)
     CapSense_1_EnableWidget(CapSense_1_PROXIMITYSENSOR0__PROX);
                             ^
.\main.c:31:29: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 02/14/2022 09:27:10 ---------------
